# localsend-tauri

./: README.md  components.d.ts  justfile  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  model.ts  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/localsend-protocol/: Cargo.toml
src-tauri/localsend-protocol/src/: api.rs  lib.rs  main.rs  mission.rs  model.rs  multicast.rs  request.rs  server.rs
src-tauri/src/: command.rs  lib.rs  main.rs  model.rs  server.rs
src/page/: Receive.vue  Send.vue  Settings.vue
