[package]
name = "localsend-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7.9"
tokio = { version = "1", features = ["rt", "net", "rt-multi-thread"] }
tokio-util = "0.7.12"
tokio-stream = "0.1.16"
uuid = { version = "1.11.0", features = ["v4"] }
