[package]
name = "localsend-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7.9", features = ["tokio"] }
tokio = { version = "1", features = [
    "rt",
    "net",
    "rt-multi-thread",
    "fs",
    "io-util",
] }
tokio-util = "0.7.12"
tokio-stream = "0.1.16"
uuid = { version = "1.11.0", features = ["v4"] }
log = "0.4.22"
env_logger = "0.11.5"
rustls = { version = "0.23.15", default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
if-addrs = "0.13.3"
